--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 Django==1.8.1
-Markdown==2.6.2
-PyYAML==3.11
 django-debug-toolbar==1.3.0
 django-filters==0.1.0
 django-rest-swagger==0.2.9
 djangorestframework==3.1.1
 gnureadline==6.3.3
 ipython==3.1.0
+Markdown==2.6.2
+psycopg2==2.6.1
+PyYAML==3.11
 sqlparse==0.1.15
-wsgiref==0.1.2
+wheel==0.24.0
